# sea-engine

./: CMakeLists.txt  engine.conf  main.cpp  test_level.cpp
include/core/: AffineTransformation.h  BasicActors.h  BasicBehaviors.hpp  BasicObjects.h  Camera.h  CollisionDetectors.hpp  ComplexActors.h  ComplexBehaviors.hpp  Context.h  Drawable.h  Engine.h  Events.h  Screen.h  Types.h
include/helpers/: BasicContext.h  BasicContext.hpp  Configuration.h  Containers.hpp  Storage.hpp  TypeTraits.hpp
src/: AffineTransofrmation.cpp  BasicBehaviors.cpp  BasicContext.cpp  BasicObjects.cpp  Camera.cpp  ComplexBehaviors.cpp  Configuration.cpp  Context.cpp  Drawable.cpp  Engine.cpp  Events.cpp  Screen.cpp
utility/: CMakeLists.txt  definitions.cpp  logger.cpp
utility/include/: Log.h  UniqueIdGenerator.hpp
